--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/tmwbook/a3-persistence#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "eslint": "^6.3.0"
