--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "passport": "^0.4.0"
+    "lowdb": "^1.0.0",
+    "moment": "^2.24.0",
+    "passport": "^0.4.0",
+    "pwd": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^6.3.0"
