--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Assignment 3 - Persistence: Two-tier Web Application with Flat File Database, Express server, and CSS template\r ===",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "rm db.json && node app.js",
     "start": "node app.js"
   },
   "repository": {
