--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pwd": "^1.1.0"
   },
   "devDependencies": {
