--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nunjucks": "^3.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pwd": "^1.1.0"
+    "pwd": "^1.1.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "eslint": "^6.3.0"
